@@ -1,3 +1,10 @@
+2004-09-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b180
+
+	* Fix: variable typo in resize_photo
+
+	* Fix: Don't try to use header() when debugging, because we've already sent text
+	  (captionator)
+
 2004-09-10  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b179
 
 	* Fix: Caption options in upload via form was ignored.
